# sapien_viz

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
sapien_viz/assets/robot/: adroit_hand_free.urdf  adroit_hand_wrist_free.urdf  allegro_hand_left.urdf  allegro_hand_right.urdf
sapien_viz/assets/ycb/collision/011_banana/: 011_banana_1.stl  011_banana_2.stl  011_banana_3.stl  011_banana_4.stl  011_banana_5.stl  011_banana_6.stl
sapien_viz/main/: viz_affordance_state.py  viz_hand_object.py  viz_robot.py  viz_urdf.py  viz_ycb_pose.py
sapien_viz/utils/: common_robot.py  ycb_object.py
test_assets/: affordance_state.pkl
test_assets/viz_ycb_pose_example_dir/: 1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  134.npy  (+125 more)
