[metadata]
name = sapien_viz
home-page = https://github.com/yzqin/sapien_viz
version = file: VERSION
license = MIT
author = SAPIEN-User
author-email = y1qin@ucsd.edu
description = Visualization tools based on SAPIEN
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    viz_robot = sapien_viz.main.viz_robot:main
    viz_urdf = sapien_viz.main.viz_urdf:main
    viz_ycb_pose = sapien_viz.main.viz_ycb_pose:main
    viz_hand_object = sapien_viz.main.viz_hand_object:main
    viz_affordance_state = sapien_viz.main.viz_affordance_state:main
